<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="#F0F0F0">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="10dp"
        tools:ignore="UselessParent"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/tu_chodiyona"
            />

        <TextView
            android:id="@+id/songName"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_regular"
            style="@style/TextAppearance.Compat.Notification.Title"
            android:text="@string/song_name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginStart="-230dp"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/artist"
            android:textColor="#b3b3b3"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="320dp"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/duration"
            android:textColor="#b3b3b3"
            android:textSize="12sp" />


        <ImageButton
            android:id="@+id/backward2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_shape"
            android:src="@drawable/backward"
            android:scaleType="centerCrop"
            android:layout_marginStart="-220dp"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/contentDescription"/>

        <ImageButton
            android:id="@+id/play2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_shape"
            android:backgroundTint="@color/black"
            android:src="@drawable/play"
            android:contentDescription="@string/contentDescription"/>

        <ImageButton
            android:id="@+id/forward2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="55dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/btn_shape"
            android:src="@drawable/forward"
            android:contentDescription="@string/contentDescription"/>

    </LinearLayout>
</RelativeLayout>