<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#7AC2BB">


    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/conso_lab"
        android:gravity="center"
        android:text="@string/head"
        android:textColor="#EDF6F5"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/conso_lab"
        android:gravity="center"
        android:text="@string/noneLiked"
        android:textColor="#EDF6F5"
        android:textSize="20sp"
        android:visibility="invisible"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/shuffle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:layout_toEndOf="@+id/chipGroup"
        android:background="@drawable/btn_shape3"
        android:contentDescription="@string/contentDescription7"
        android:src="@drawable/shuffle"
        tools:ignore="size,TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/removeAll"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="210dp"
        android:layout_toEndOf="@id/shuffle"
        android:background="@drawable/btn_shape3"
        android:contentDescription="@string/contentDescription7"
        android:src="@drawable/trash"
        tools:ignore="size,TouchTargetSizeCheck,ImageContrastCheck" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        app:singleSelection="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.chip.Chip
            android:id="@+id/fav"
            style="@style/CustomStyle"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:fontFamily="@font/josefinsans_semibold"
            android:text="@string/fav"
            android:textSize="16sp"
            app:checkedIcon="@drawable/check"
            app:checkedIconEnabled="true"
            app:chipCornerRadius="20dp"
            app:chipIconSize="22dp"
            app:chipStrokeWidth="0dp"
            tools:ignore="TextContrastCheck" />


    </com.google.android.material.chip.ChipGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="258dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/songView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_style2"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="20dp"/>


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:name="com.app.bliss.NowPlaying"
            tools:layout="@layout/fragment_now_playing"/>

    </RelativeLayout>


</RelativeLayout>